fixed facebook overflow issue

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -14,7 +14,6 @@
     repeat: repeat-x
   border: 1px solid #cbc9cf
   padding: 30px 30px 15px
-  overflow: hidden
   position: relative
   min-height: 368px
 
