--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -34,7 +34,6 @@ p
 #hero
   background: image-url("laptop.jpg") no-repeat
   height: 535px
-  overflow: hidden
 
   #hero_content
     float: right
@@ -76,10 +75,7 @@ p
 
   #hero_links
     width: 250px
-    clear: right
-    overflow: hidden
-    float: right
-    padding-right: 100px
+    float: left
     margin-top: 15px
     div
       float: left
@@ -305,7 +301,7 @@ p
 
       .hero_shadow
         position: relative
-        top: -11px
+        top: -13px
 
       ul
         margin: 0
